--- a/model/knnclassif.ipynb
+++ b/model/knnclassif.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c0386d76",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c17e2d17",
    "metadata": {},
    "outputs": [],
@@ -30,10 +30,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4809ca0d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The  k value chosen is 31, with an average score of 88.59377229785655%\n",
+      "The score for the test set is 86.92777212614445%\n",
+      "The  k value chosen is 2, with an average score of 100.0%\n",
+      "The score for the test set is 100.0%\n"
+     ]
+    }
+   ],
    "source": [
     "kf = KFold(n_splits=10)\n",
     "k_vals = np.arange(2,40,1)\n",
@@ -90,10 +101,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8b7e5186",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion matrix for the \"Single\" dataset:\n",
+      "[[456   3   2   0  11   3   5   2   0]\n",
+      " [ 15 198  18   4  11   1   5   0   3]\n",
+      " [  6   2 256   1   8   0   5   3   0]\n",
+      " [  4   5   1 125  15   1   4   0   4]\n",
+      " [  6   4   3   0 291   1   2   0   1]\n",
+      " [  6   9   5   0   1  83   4   2   0]\n",
+      " [  8   0   2   2   4   0 138   1   2]\n",
+      " [  5   5   3   1   2   4   3  49   3]\n",
+      " [ 11   2   3   3   7   0   0   0 113]]\n",
+      "\n",
+      "Confusion matrix for the \"Final\" dataset:\n",
+      "[[ 94   0]\n",
+      " [  0 194]]\n"
+     ]
+    }
+   ],
    "source": [
     "print('Confusion matrix for the \"Single\" dataset:')\n",
     "print(conf_matrix[0])\n",
@@ -102,11 +134,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4ef3696b",
+   "cell_type": "markdown",
+   "id": "f1657c61",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
