added confusion matrix to mlp classifier

--- a/model/mlpclassif.ipynb
+++ b/model/mlpclassif.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "04e61aae",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "8ab9b526",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ec762a78",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 85.84%\n",
+      "Test Accuracy = 89.76%\n",
       "--------------------------------------\n"
      ]
     },
@@ -81,7 +81,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 87.58%\n",
+      "Test Accuracy = 87.36%\n",
       "--------------------------------------\n"
      ]
     },
@@ -103,7 +103,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 88.67%\n",
+      "Test Accuracy = 85.4%\n",
       "--------------------------------------\n"
      ]
     },
@@ -125,7 +125,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 87.15%\n",
+      "Test Accuracy = 90.63%\n",
       "--------------------------------------\n"
      ]
     },
@@ -147,7 +147,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 89.11%\n",
+      "Test Accuracy = 90.63%\n",
       "--------------------------------------\n"
      ]
     },
@@ -169,7 +169,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 90.61%\n",
+      "Test Accuracy = 87.77%\n",
       "--------------------------------------\n"
      ]
     },
@@ -191,7 +191,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 89.52%\n",
+      "Test Accuracy = 89.3%\n",
       "--------------------------------------\n"
      ]
     },
@@ -213,7 +213,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 89.96%\n",
+      "Test Accuracy = 87.77%\n",
       "--------------------------------------\n"
      ]
     },
@@ -235,7 +235,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 88.21%\n",
+      "Test Accuracy = 89.08%\n",
       "--------------------------------------\n"
      ]
     },
@@ -257,9 +257,9 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 89.52%\n",
+      "Test Accuracy = 89.08%\n",
       "--------------------------------------\n",
-      "Average score for all the folds is 0.8861608204659834\n"
+      "Average score for all the folds is 0.8868039501098839\n"
      ]
     },
     {
@@ -274,7 +274,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final Accuracy score for the MLP: 90.95\n",
+      "Final Accuracy score for the MLP: 89.01\n",
       "Dataset: Final\n"
      ]
     },
@@ -296,7 +296,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 100.0%\n",
+      "Test Accuracy = 98.51%\n",
       "--------------------------------------\n"
      ]
     },
@@ -318,7 +318,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 98.51%\n",
+      "Test Accuracy = 100.0%\n",
       "--------------------------------------\n"
      ]
     },
@@ -340,7 +340,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 95.52%\n",
+      "Test Accuracy = 100.0%\n",
       "--------------------------------------\n"
      ]
     },
@@ -362,7 +362,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 98.51%\n",
+      "Test Accuracy = 97.01%\n",
       "--------------------------------------\n"
      ]
     },
@@ -384,7 +384,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 100.0%\n",
+      "Test Accuracy = 97.01%\n",
       "--------------------------------------\n"
      ]
     },
@@ -406,7 +406,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 100.0%\n",
+      "Test Accuracy = 98.51%\n",
       "--------------------------------------\n"
      ]
     },
@@ -428,7 +428,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 100.0%\n",
+      "Test Accuracy = 98.51%\n",
       "--------------------------------------\n"
      ]
     },
@@ -450,7 +450,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 97.01%\n",
+      "Test Accuracy = 100.0%\n",
       "--------------------------------------\n"
      ]
     },
@@ -472,7 +472,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 100.0%\n",
+      "Test Accuracy = 97.01%\n",
       "--------------------------------------\n"
      ]
     },
@@ -496,8 +496,8 @@
       "Train Accuracy = 100.0%\n",
       "Test Accuracy = 98.51%\n",
       "--------------------------------------\n",
-      "Average score for all the folds is 0.9880597014925373\n",
-      "Final Accuracy score for the MLP: 97.92\n"
+      "Average score for all the folds is 0.9850746268656716\n",
+      "Final Accuracy score for the MLP: 99.31\n"
      ]
     },
     {
@@ -516,7 +516,7 @@
     "net_learning_rate = 0.01\n",
     "epochs = 250\n",
     "datasets_names = ['Single', 'Final']\n",
-    "\n",
+    "conf_matrix = []\n",
     "\n",
     "for ds_cnt, ds in enumerate(datasets):\n",
     "    X = ds[:, :9]\n",
@@ -570,13 +570,48 @@
     "    final_pred = final_net.predict(X_test)\n",
     "    final_acc = accuracy_score(y_test, final_pred)\n",
     "    print(f'Final Accuracy score for the MLP: {np.round(final_acc*100, 2)}')\n",
+    "    conf_matrix += [confusion_matrix(y_test, final_pred)]\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "af231352",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion matrix for the \"Single\" dataset:\n",
+      "[[443   2   3   2   4   3   3   0   6]\n",
+      " [  5 215   1   2   4   5   4   1   5]\n",
+      " [  8   2 273   3   7   2   7   4   1]\n",
+      " [  5   6   0 128   5   3   5   2   2]\n",
+      " [  6   7   8   6 305   2   2   0   3]\n",
+      " [  5   2   0   2   5  82   1   2   1]\n",
+      " [ 12   2   1   4   0   1 134   0   0]\n",
+      " [  5   2   0   0   0   0   1  52   0]\n",
+      " [  9   2   6   0   2   2   3   0 118]]\n",
+      "\n",
+      "Confusion matrix for the \"Final\" dataset:\n",
+      "[[ 85   2]\n",
+      " [  0 201]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Confusion matrix for the \"Single\" dataset:')\n",
+    "print(conf_matrix[0])\n",
+    "print('\\nConfusion matrix for the \"Final\" dataset:')\n",
+    "print(conf_matrix[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fb79582",
    "metadata": {},
    "outputs": [],
    "source": []
