--- a/model/svmclassif.ipynb
+++ b/model/svmclassif.ipynb
@@ -43,25 +43,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f50c405f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset: Single\n",
-      "The chosen kernel function is rbf\n",
-      "The chosen C value is 9\n",
-      "The final score is 89.33%\n",
-      "Dataset: Final\n",
-      "The chosen kernel function is rbf\n",
-      "The chosen C value is 4\n",
-      "The final score is 99.25%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for ds_cnt, ds in enumerate(datasets):\n",
     "    X = ds[:, :9]\n",
@@ -105,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "e7338638",
    "metadata": {},
    "outputs": [
@@ -114,11 +99,12 @@
      "output_type": "stream",
      "text": [
       "Dataset: Single\n",
-      "The accuracy score is 89.01%\n"
+      "The accuracy score is 89.57%\n"
      ]
     }
    ],
    "source": [
+    "conf_matrix = []\n",
     "ds = datasets[0]\n",
     "X = ds[:, :9]\n",
     "y = ds[:, 9:]\n",
@@ -126,14 +112,16 @@
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.3)\n",
     "clf = SVC(kernel='rbf', C=9)\n",
     "clf.fit (X_train, y_train.ravel())\n",
+    "y_pred = (X_test)\n",
     "score = clf.score(X_test, y_test)\n",
     "print('Dataset: Single')\n",
-    "print(f'The accuracy score is {np.round(score * 100, 2)}%')"
+    "print(f'The accuracy score is {np.round(score * 100, 2)}%')\n",
+    "conf_matrix += [confusion_matrix(np.argy_test, y_pred)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "cb720908",
    "metadata": {},
    "outputs": [
@@ -142,7 +130,7 @@
      "output_type": "stream",
      "text": [
       "Dataset: Final\n",
-      "The accuracy score is 98.96%\n"
+      "The accuracy score is 100.0%\n"
      ]
     }
    ],
@@ -154,9 +142,10 @@
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.3)\n",
     "clf = SVC(kernel='rbf', C=4)\n",
     "clf.fit (X_train, y_train.ravel())\n",
+    "y_pred = (X_test)\n",
     "score = clf.score(X_test, y_test)\n",
     "print('Dataset: Final')\n",
-    "print(f'The accuracy score is {np.round(score * 100, 2)}%')"
+    "print(f'The accuracy score is {np.round(score * 100, 2)}%')\n"
    ]
   },
   {
