normalize confusion matrices

--- a/model/knnclassif.ipynb
+++ b/model/knnclassif.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "4809ca0d",
    "metadata": {},
    "outputs": [
@@ -38,9 +38,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The  k value chosen is 31, with an average score of 88.59377229785655%\n",
-      "The score for the test set is 86.92777212614445%\n",
-      "The  k value chosen is 2, with an average score of 100.0%\n",
+      "The  k value chosen is 29, with an average score of 88.22187972714559%\n",
+      "The score for the test set is 90.38657171922686%\n",
+      "The  k value chosen is 2, with an average score of 99.8507462686567%\n",
       "The score for the test set is 100.0%\n"
      ]
     }
@@ -96,12 +96,12 @@
     "    y_pred = final_classifier.predict(X_test)\n",
     "    score = final_classifier.score(X_test, y_test)\n",
     "    print(f'The score for the test set is {score*100}%')\n",
-    "    conf_matrix += [confusion_matrix(y_test, y_pred)]"
+    "    conf_matrix += [confusion_matrix(y_test, y_pred, normalize='true')]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "8b7e5186",
    "metadata": {},
    "outputs": [
@@ -110,19 +110,28 @@
      "output_type": "stream",
      "text": [
       "Confusion matrix for the \"Single\" dataset:\n",
-      "[[456   3   2   0  11   3   5   2   0]\n",
-      " [ 15 198  18   4  11   1   5   0   3]\n",
-      " [  6   2 256   1   8   0   5   3   0]\n",
-      " [  4   5   1 125  15   1   4   0   4]\n",
-      " [  6   4   3   0 291   1   2   0   1]\n",
-      " [  6   9   5   0   1  83   4   2   0]\n",
-      " [  8   0   2   2   4   0 138   1   2]\n",
-      " [  5   5   3   1   2   4   3  49   3]\n",
-      " [ 11   2   3   3   7   0   0   0 113]]\n",
+      "[[0.96483516 0.00659341 0.01098901 0.         0.01318681 0.0021978\n",
+      "  0.         0.0021978  0.        ]\n",
+      " [0.02118644 0.89830508 0.01694915 0.         0.03813559 0.00423729\n",
+      "  0.00847458 0.00847458 0.00423729]\n",
+      " [0.02960526 0.00657895 0.92105263 0.00328947 0.02960526 0.00986842\n",
+      "  0.         0.         0.        ]\n",
+      " [0.06790123 0.04320988 0.01234568 0.74074074 0.09259259 0.01234568\n",
+      "  0.01851852 0.00617284 0.00617284]\n",
+      " [0.0123839  0.00619195 0.0123839  0.00619195 0.9628483  0.\n",
+      "  0.         0.         0.        ]\n",
+      " [0.03846154 0.04807692 0.02884615 0.01923077 0.00961538 0.82692308\n",
+      "  0.01923077 0.         0.00961538]\n",
+      " [0.01898734 0.         0.02531646 0.         0.06329114 0.\n",
+      "  0.89240506 0.         0.        ]\n",
+      " [0.05813953 0.02325581 0.         0.         0.03488372 0.03488372\n",
+      "  0.02325581 0.8255814  0.        ]\n",
+      " [0.11594203 0.00724638 0.         0.01449275 0.01449275 0.\n",
+      "  0.         0.         0.84782609]]\n",
       "\n",
       "Confusion matrix for the \"Final\" dataset:\n",
-      "[[ 94   0]\n",
-      " [  0 194]]\n"
+      "[[1. 0.]\n",
+      " [0. 1.]]\n"
      ]
     }
    ],
@@ -132,12 +141,6 @@
     "print('\\nConfusion matrix for the \"Final\" dataset:')\n",
     "print(conf_matrix[1])\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f1657c61",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
