--- a/model/svmclassif.ipynb
+++ b/model/svmclassif.ipynb
@@ -43,10 +43,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f50c405f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset: Single\n",
+      "The chosen kernel function is rbf\n",
+      "The chosen C value is 9\n",
+      "The final score is 87.81%\n",
+      "Dataset: Final\n",
+      "The chosen kernel function is rbf\n",
+      "The chosen C value is 4\n",
+      "The final score is 99.4%\n"
+     ]
+    }
+   ],
    "source": [
     "for ds_cnt, ds in enumerate(datasets):\n",
     "    X = ds[:, :9]\n",
@@ -90,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "e7338638",
    "metadata": {},
    "outputs": [
@@ -99,7 +114,7 @@
      "output_type": "stream",
      "text": [
       "Dataset: Single\n",
-      "The accuracy score is 89.57%\n"
+      "The accuracy score is 89.17%\n"
      ]
     }
    ],
@@ -112,16 +127,14 @@
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.3)\n",
     "clf = SVC(kernel='rbf', C=9)\n",
     "clf.fit (X_train, y_train.ravel())\n",
-    "y_pred = (X_test)\n",
     "score = clf.score(X_test, y_test)\n",
     "print('Dataset: Single')\n",
-    "print(f'The accuracy score is {np.round(score * 100, 2)}%')\n",
-    "conf_matrix += [confusion_matrix(np.argy_test, y_pred)]"
+    "print(f'The accuracy score is {np.round(score * 100, 2)}%')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "cb720908",
    "metadata": {},
    "outputs": [
@@ -142,7 +155,6 @@
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.3)\n",
     "clf = SVC(kernel='rbf', C=4)\n",
     "clf.fit (X_train, y_train.ravel())\n",
-    "y_pred = (X_test)\n",
     "score = clf.score(X_test, y_test)\n",
     "print('Dataset: Final')\n",
     "print(f'The accuracy score is {np.round(score * 100, 2)}%')\n"
