--- a/model/mlpclassif.ipynb
+++ b/model/mlpclassif.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "ec762a78",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 89.76%\n",
+      "Test Accuracy = 88.45%\n",
       "--------------------------------------\n"
      ]
     },
@@ -81,7 +81,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 87.36%\n",
+      "Test Accuracy = 91.07%\n",
       "--------------------------------------\n"
      ]
     },
@@ -103,7 +103,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 85.4%\n",
+      "Test Accuracy = 87.58%\n",
       "--------------------------------------\n"
      ]
     },
@@ -125,7 +125,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 90.63%\n",
+      "Test Accuracy = 86.27%\n",
       "--------------------------------------\n"
      ]
     },
@@ -147,7 +147,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 90.63%\n",
+      "Test Accuracy = 89.54%\n",
       "--------------------------------------\n"
      ]
     },
@@ -169,7 +169,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 87.77%\n",
+      "Test Accuracy = 88.21%\n",
       "--------------------------------------\n"
      ]
     },
@@ -191,7 +191,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 89.3%\n",
+      "Test Accuracy = 87.12%\n",
       "--------------------------------------\n"
      ]
     },
@@ -213,7 +213,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 87.77%\n",
+      "Test Accuracy = 88.21%\n",
       "--------------------------------------\n"
      ]
     },
@@ -235,7 +235,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 89.08%\n",
+      "Test Accuracy = 88.86%\n",
       "--------------------------------------\n"
      ]
     },
@@ -257,9 +257,9 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 89.08%\n",
+      "Test Accuracy = 87.99%\n",
       "--------------------------------------\n",
-      "Average score for all the folds is 0.8868039501098839\n"
+      "Average score for all the folds is 0.8833124030786502\n"
      ]
     },
     {
@@ -274,7 +274,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final Accuracy score for the MLP: 89.01\n",
+      "Final Accuracy score for the MLP: 90.18\n",
       "Dataset: Final\n"
      ]
     },
@@ -318,7 +318,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 100.0%\n",
+      "Test Accuracy = 98.51%\n",
       "--------------------------------------\n"
      ]
     },
@@ -340,7 +340,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 100.0%\n",
+      "Test Accuracy = 98.51%\n",
       "--------------------------------------\n"
      ]
     },
@@ -362,7 +362,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 97.01%\n",
+      "Test Accuracy = 100.0%\n",
       "--------------------------------------\n"
      ]
     },
@@ -384,7 +384,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 97.01%\n",
+      "Test Accuracy = 98.51%\n",
       "--------------------------------------\n"
      ]
     },
@@ -406,7 +406,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 98.51%\n",
+      "Test Accuracy = 97.01%\n",
       "--------------------------------------\n"
      ]
     },
@@ -450,7 +450,7 @@
       "Learning Rate: 0.01\n",
       "Number of Epochs: 250\n",
       "Train Accuracy = 100.0%\n",
-      "Test Accuracy = 100.0%\n",
+      "Test Accuracy = 98.51%\n",
       "--------------------------------------\n"
      ]
     },
@@ -496,8 +496,8 @@
       "Train Accuracy = 100.0%\n",
       "Test Accuracy = 98.51%\n",
       "--------------------------------------\n",
-      "Average score for all the folds is 0.9850746268656716\n",
-      "Final Accuracy score for the MLP: 99.31\n"
+      "Average score for all the folds is 0.9835820895522387\n",
+      "Final Accuracy score for the MLP: 98.96\n"
      ]
     },
     {
@@ -570,13 +570,13 @@
     "    final_pred = final_net.predict(X_test)\n",
     "    final_acc = accuracy_score(y_test, final_pred)\n",
     "    print(f'Final Accuracy score for the MLP: {np.round(final_acc*100, 2)}')\n",
-    "    conf_matrix += [confusion_matrix(y_test, final_pred)]\n",
+    "    conf_matrix += [confusion_matrix(y_test, final_pred, normalize='true')]\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "af231352",
    "metadata": {},
    "outputs": [
@@ -585,19 +585,28 @@
      "output_type": "stream",
      "text": [
       "Confusion matrix for the \"Single\" dataset:\n",
-      "[[443   2   3   2   4   3   3   0   6]\n",
-      " [  5 215   1   2   4   5   4   1   5]\n",
-      " [  8   2 273   3   7   2   7   4   1]\n",
-      " [  5   6   0 128   5   3   5   2   2]\n",
-      " [  6   7   8   6 305   2   2   0   3]\n",
-      " [  5   2   0   2   5  82   1   2   1]\n",
-      " [ 12   2   1   4   0   1 134   0   0]\n",
-      " [  5   2   0   0   0   0   1  52   0]\n",
-      " [  9   2   6   0   2   2   3   0 118]]\n",
+      "[[0.93487395 0.00630252 0.0105042  0.00210084 0.01260504 0.00420168\n",
+      "  0.01890756 0.00420168 0.00630252]\n",
+      " [0.00359712 0.85251799 0.04676259 0.03597122 0.01438849 0.00359712\n",
+      "  0.02517986 0.01079137 0.00719424]\n",
+      " [0.01779359 0.03202847 0.88967972 0.01067616 0.02491103 0.\n",
+      "  0.01423488 0.         0.01067616]\n",
+      " [0.02484472 0.01242236 0.02484472 0.85093168 0.0310559  0.01242236\n",
+      "  0.0310559  0.00621118 0.00621118]\n",
+      " [0.00675676 0.02364865 0.00675676 0.02027027 0.93243243 0.\n",
+      "  0.00675676 0.         0.00337838]\n",
+      " [0.         0.01904762 0.         0.04761905 0.00952381 0.87619048\n",
+      "  0.00952381 0.00952381 0.02857143]\n",
+      " [0.00591716 0.00591716 0.01183432 0.03550296 0.01775148 0.00591716\n",
+      "  0.89940828 0.01183432 0.00591716]\n",
+      " [0.01369863 0.01369863 0.         0.         0.         0.01369863\n",
+      "  0.         0.94520548 0.01369863]\n",
+      " [0.00787402 0.03149606 0.00787402 0.02362205 0.00787402 0.\n",
+      "  0.01574803 0.         0.90551181]]\n",
       "\n",
       "Confusion matrix for the \"Final\" dataset:\n",
-      "[[ 85   2]\n",
-      " [  0 201]]\n"
+      "[[0.96842105 0.03157895]\n",
+      " [0.         1.        ]]\n"
      ]
     }
    ],
@@ -611,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fb79582",
+   "id": "676655d2",
    "metadata": {},
    "outputs": [],
    "source": []
